[package]
name = "rut"
version = "0.1.0"
authors = ["Daniel Vigovszky <daniel.vigovszky@gmail.com>"]
edition = "2018"

[dependencies]
quick-error = "1.2.2"

[target.'cfg(windows)'.dependencies]

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.6"
features = ["consoleapi", "errhandlingapi", "handleapi", "minwindef", "processenv", "winbase", "wincon", "winuser"]

[target.'cfg(unix)'.dependencies]
nix = "0.13.0"
